--- a/Baselibrary/src/main/res/layout/activity_pay_success.xml
+++ b/Baselibrary/src/main/res/layout/activity_pay_success.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/MatchMatch.Vertical.White">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              style="@style/MatchMatch.Vertical.White">
 
     <com.yizhipin.base.widgets.HeaderBar
         android:id="@+id/mHeaderBar"
         style="@style/MatchWrap"
-        app:titleText="@string/pay_success" />
+        app:titleText="@string/pay_success"/>
+
+    <ImageView
+        style="@style/WrapWrap"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/ok"/>
 
     <TextView
         android:id="@+id/mContentTv"
         style="@style/MatchWrap"
-        android:layout_marginTop="100dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
         android:background="@color/yWhite"
         android:gravity="center_horizontal"
         android:textColor="@color/yBlack"
-        android:textSize="@dimen/yTextLargeSize" />
+        android:textSize="@dimen/yTextLargeSize"/>
 
     <Button
         android:id="@+id/mConfirmBtn"
@@ -26,5 +32,5 @@
         android:layout_marginRight="@dimen/yPadding"
         android:enabled="true"
         android:text="@string/confirm"
-        android:textSize="@dimen/yTextBigSize" />
+        android:textSize="@dimen/yTextBigSize"/>
 </LinearLayout>
