--- a/PayCenter/src/main/res/layout/pay_result.xml
+++ b/PayCenter/src/main/res/layout/pay_result.xml
@@ -8,7 +8,6 @@
 	 	android:layout_height="fill_parent"
 		android:gravity="center"
 	 	android:textColor="#ff000000"
-	 	android:textSize="20dp"
-	 	android:text="ssssssssssss"/>
+	 	android:textSize="20dp"/>
 	
 </LinearLayout>
