--- a/App/src/main/res/layout/fragment_me.xml
+++ b/App/src/main/res/layout/fragment_me.xml
@@ -9,7 +9,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/background"
+            android:background="@drawable/user_bg"
             android:padding="@dimen/yPadding">
 
             <ImageView
