--- a/Baselibrary/src/main/res/layout/toolbar.xml
+++ b/Baselibrary/src/main/res/layout/toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/yMain"
+    android:background="@color/yRed"
     app:titleTextColor="@color/yWhite"
     app:theme="@style/AppTheme">
 
