--- a/GoodsCenter/src/main/res/layout/layout_share_bill_item.xml
+++ b/GoodsCenter/src/main/res/layout/layout_share_bill_item.xml
@@ -22,7 +22,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="名字名字"
-            android:textColor="@color/yMain"
+            android:textColor="@color/yRed"
             android:textSize="@dimen/yTextMiddleBigSize"/>
 
         <ImageView
@@ -37,7 +37,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginLeft="@dimen/yPaddingMiddle"
             android:text="1km"
-            android:textColor="@color/yMain"
+            android:textColor="@color/yRed"
             android:textSize="@dimen/yTextMiddleBigSize"/>
 
 
@@ -70,7 +70,7 @@
             android:layout_toRightOf="@+id/subtotal"
             android:gravity="bottom"
             android:text="1"
-            android:textColor="@color/yMain"
+            android:textColor="@color/yRed"
             android:textSize="@dimen/yTextBigSize"/>
 
         <TextView
@@ -88,7 +88,7 @@
             android:layout_alignParentRight="true"
             android:gravity="bottom"
             android:text="还剩2人成单"
-            android:textColor="@color/yMain"
+            android:textColor="@color/yRed"
             android:textSize="@dimen/yTextSmallLarSize"/>
     </RelativeLayout>
 
