--- a/UserCenter/src/main/res/layout/activity_bind_mobile.xml
+++ b/UserCenter/src/main/res/layout/activity_bind_mobile.xml
@@ -77,7 +77,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:text="@string/get_code"
-                android:textColor="@color/yMain"
+                android:textColor="@color/yRed"
                 android:textSize="@dimen/yTextMiddleSize"/>
 
         </RelativeLayout>
