--- a/UserCenter/src/main/res/layout/activity_login.xml
+++ b/UserCenter/src/main/res/layout/activity_login.xml
@@ -141,5 +141,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginRight="@dimen/yPaddingBigSmall"
-        android:layout_marginBottom="70dp" />
+        android:layout_marginBottom="70dp"
+        android:visibility="gone"/>
 </android.support.design.widget.CoordinatorLayout>
